-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.9
-
None
-
72913b5e7 (dev), f71f3b042 (6.8)
- relates to
-
QTBUG-127169 Material style theme does not change when the system theme changes
-
- Closed
-
For Gerrit Dashboard: QTBUG-128444 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
588954,6 | Universal: update style theme when system theme is changed | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
592363,2 | Universal: update style theme when system theme is changed | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |