Universal: update style theme when system theme is changed

Does what b45629207ee32a3d80b6ea6553e8762eec8a86da did with the
Material style with the Universal style.

Fixes: QTBUG-128444
Change-Id: I7bb10f2852f91d2c4a21dc30170220e1528387be
Reviewed-by: Santhosh Kumar <santhosh.kumar.selvaraj@qt.io>
(cherry picked from commit 72913b5e769440cec5772a393c12e07a4d3a168e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>